--- a/DocumentManagementSystem/Views/Account/LayoutAccount.cshtml
+++ b/DocumentManagementSystem/Views/Account/LayoutAccount.cshtml
@@ -9,8 +9,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+
+    <link rel="stylesheet" href="~/Content/normalize.css" />
+    <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/Content/styles.css" />
+    <link rel="stylesheet" href="~/Content/responsive.css" />
+    <link rel="stylesheet" href="~/Content/Site.css" />
 </head>
 <body>
     <noscript>
